fix last clipping of last checkbox item

--- a/ui/src/index.sass
+++ b/ui/src/index.sass
@@ -365,6 +365,7 @@ hr
   min-height: 100%
   flex-basis: 100%
   position: relative
+  padding-bottom: 2rem
   &:before 
     content: ''
     display: block 
